--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from KnnAC.knnAC import KNearNeighbors as knnAC\n",
-    "from KnnAC import utilsAC"
+    "from KmeansAC.kmeansAC import KMeans as kmAC\n",
+    "from KmeansAC import utilsAC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "    train_x, train_min, train_max = utilsAC.normMinMax(train_x, mode='train')\n",
     "    test_x = utilsAC.normMinMax(test_x, train_min=train_min, train_max=train_max, mode='test')\n",
     "\n",
-    "    my_knn = knnAC(2)\n",
+    "    my_knn = kmAC(2)\n",
     "    my_knn.fit(train_x)\n",
     "    pred = my_knn.predict(test_x)\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4  6.34460  7.6650  0.53239  1"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,15 +215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of prediction: 0.175\n",
-      "Accuracy of inverted prediction: 0.825\n"
+      "Accuracy of prediction: 0.19166666666666668\n",
+      "Accuracy of inverted prediction: 0.8083333333333333\n"
      ]
     },
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -490,15 +490,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of prediction: 0.07017543859649122\n",
-      "Accuracy of inverted prediction: 0.9298245614035088\n",
+      "Accuracy of prediction: 0.09941520467836257\n",
+      "Accuracy of inverted prediction: 0.9005847953216374\n",
       "Cannot plot data with more than 3 dimensions\n"
      ]
     }
